WIP fix persistent touch bug on iOS

--- a/src/app/components/next-button/next-button.module.css
+++ b/src/app/components/next-button/next-button.module.css
@@ -33,7 +33,7 @@
 @media (max-width: 650px) {
   .nextButton {
     height: 2.5rem;
-    width: 180px;
+    width: 183px;
     font-size: 16px;
     padding-bottom: 4px;
     padding-left: 17px;
