--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -59,6 +59,6 @@
   }
   .footer {
     font-size: 0.75rem;
-    margin-top: 0.8rem;
+    margin-top: 0.65rem;
   }
 }
